project section added

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
 
         <div class="nav">
-            <img src="images/milan.jpg" alt=" " class="my-image" height="200" width="175">
-            <h2>I'm Milan Chaudhary</h2>
+            <img src="" alt=" "id="profile_img" height="200" width="175">
+            <h2 id="full_name"></h2>
             <span> CSIT Student | Fresher Web Developer </span> <br /><br />
             <span>NEVER STOP LEARNING BECAUSE LIFE NEVER STOP TEACHING</span>
 
@@ -48,7 +48,7 @@
         </div>
     </section>
     <section id="project">
-        <div class="injection">
+        <div class="git-file">
         </div>
     </section>
     <footer id="main-footer">
