--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#features">Skills</a></li>
+                <li><a href="#project">Projects</a></li>
                 <li><a href="#main-footer">About</a></li>
 
             </div>
@@ -44,10 +45,11 @@
         <div class="box bg-light">
             <i class="fab fa-python fa-4x"></i>
             <h3>Python</h3>
-            <p>I've learned basic of python with django framework.</p>
+            <p>I've learned basic of python with django framework and other python library. </p>
         </div>
     </section>
     <section id="project">
+        <h4>Projects</h4>
         <div class="git-file">
         </div>
     </section>
