add in index.css

--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
                 </ul>
             </div>
         </div>
-
-
         <div class="nav">
             <img src="" alt=" " id="profile_img" height="200" width="175">
             <h2 id="full_name"></h2>
@@ -88,7 +86,9 @@
                 <a href="https://www.facebook.com/milan.chaudhary.101" target="#"><i
                         class="fab fa-facebook-square"></i></a></span>
         </p>
-        <p> &copy; <script>document.write(new Date().getFullYear())</script> , All Rights Reserved</p>
+        <p> &copy;
+            <script>document.write(new Date().getFullYear())</script> , All Rights Reserved
+        </p>
 
     </footer>
     <script src="./js/main.js"></script>
